@@ -278,6 +278,15 @@ name|java
 operator|.
 name|io
 operator|.
+name|File
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|StringReader
 import|;
 end_import
@@ -486,6 +495,13 @@ name|Object
 argument_list|>
 name|coreScopeSession
 decl_stmt|;
+DECL|field|isDeltaImportSupported
+specifier|private
+name|boolean
+name|isDeltaImportSupported
+init|=
+literal|false
+decl_stmt|;
 comment|/**    * Only for testing purposes    */
 DECL|method|DataImporter
 name|DataImporter
@@ -688,6 +704,23 @@ name|identifyPk
 argument_list|(
 name|e
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|e
+operator|.
+name|allAttributes
+operator|.
+name|containsKey
+argument_list|(
+name|SqlEntityProcessor
+operator|.
+name|DELTA_QUERY
+argument_list|)
+condition|)
+name|isDeltaImportSupported
+operator|=
+literal|true
 expr_stmt|;
 block|}
 block|}
@@ -2176,6 +2209,11 @@ argument_list|,
 name|requestParams
 argument_list|)
 expr_stmt|;
+name|checkWritablePersistFile
+argument_list|(
+name|writer
+argument_list|)
+expr_stmt|;
 name|docBuilder
 operator|.
 name|execute
@@ -2246,6 +2284,68 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|checkWritablePersistFile
+specifier|private
+name|void
+name|checkWritablePersistFile
+parameter_list|(
+name|SolrWriter
+name|writer
+parameter_list|)
+block|{
+name|File
+name|persistFile
+init|=
+name|writer
+operator|.
+name|getPersistFile
+argument_list|()
+decl_stmt|;
+name|boolean
+name|isWritable
+init|=
+name|persistFile
+operator|.
+name|exists
+argument_list|()
+condition|?
+name|persistFile
+operator|.
+name|canWrite
+argument_list|()
+else|:
+name|persistFile
+operator|.
+name|getParentFile
+argument_list|()
+operator|.
+name|canWrite
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|isDeltaImportSupported
+operator|&&
+operator|!
+name|isWritable
+condition|)
+block|{
+throw|throw
+operator|new
+name|DataImportHandlerException
+argument_list|(
+name|SEVERE
+argument_list|,
+name|persistFile
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+literal|" is not writable. Delta imports are supported by data config but will not work."
+argument_list|)
+throw|;
+block|}
+block|}
 DECL|method|doDeltaImport
 specifier|public
 name|void
@@ -2291,6 +2391,11 @@ argument_list|,
 name|writer
 argument_list|,
 name|requestParams
+argument_list|)
+expr_stmt|;
+name|checkWritablePersistFile
+argument_list|(
+name|writer
 argument_list|)
 expr_stmt|;
 name|docBuilder
