@@ -444,43 +444,18 @@ argument_list|(
 name|p
 argument_list|)
 expr_stmt|;
-name|String
-name|filePath
+name|File
+name|persistFile
 init|=
-name|configDir
+name|getPersistFile
+argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|configDir
-operator|!=
-literal|null
-operator|&&
-operator|!
-name|configDir
-operator|.
-name|endsWith
-argument_list|(
-name|File
-operator|.
-name|separator
-argument_list|)
-condition|)
-name|filePath
-operator|+=
-name|File
-operator|.
-name|separator
-expr_stmt|;
-name|filePath
-operator|+=
-name|persistFilename
-expr_stmt|;
 name|propOutput
 operator|=
 operator|new
 name|FileOutputStream
 argument_list|(
-name|filePath
+name|persistFile
 argument_list|)
 expr_stmt|;
 name|props
@@ -498,7 +473,10 @@ name|info
 argument_list|(
 literal|"Wrote last indexed time to "
 operator|+
-name|persistFilename
+name|persistFile
+operator|.
+name|getAbsolutePath
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -570,6 +548,50 @@ literal|null
 expr_stmt|;
 block|}
 block|}
+block|}
+DECL|method|getPersistFile
+name|File
+name|getPersistFile
+parameter_list|()
+block|{
+name|String
+name|filePath
+init|=
+name|configDir
+decl_stmt|;
+if|if
+condition|(
+name|configDir
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|configDir
+operator|.
+name|endsWith
+argument_list|(
+name|File
+operator|.
+name|separator
+argument_list|)
+condition|)
+name|filePath
+operator|+=
+name|File
+operator|.
+name|separator
+expr_stmt|;
+name|filePath
+operator|+=
+name|persistFilename
+expr_stmt|;
+return|return
+operator|new
+name|File
+argument_list|(
+name|filePath
+argument_list|)
+return|;
 block|}
 DECL|method|finish
 name|void
