@@ -47,6 +47,24 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|FileOutputStream
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -332,6 +350,189 @@ block|{
 name|add1document
 argument_list|()
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|testNonWritablePersistFile
+specifier|public
+name|void
+name|testNonWritablePersistFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// See SOLR-2551
+name|String
+name|configDir
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getResourceLoader
+argument_list|()
+operator|.
+name|getConfigDir
+argument_list|()
+decl_stmt|;
+name|String
+name|filePath
+init|=
+name|configDir
+decl_stmt|;
+if|if
+condition|(
+name|configDir
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|configDir
+operator|.
+name|endsWith
+argument_list|(
+name|File
+operator|.
+name|separator
+argument_list|)
+condition|)
+name|filePath
+operator|+=
+name|File
+operator|.
+name|separator
+expr_stmt|;
+name|filePath
+operator|+=
+literal|"dataimport.properties"
+expr_stmt|;
+name|File
+name|f
+init|=
+operator|new
+name|File
+argument_list|(
+name|filePath
+argument_list|)
+decl_stmt|;
+comment|// execute the test only if we are able to set file to read only mode
+if|if
+condition|(
+operator|(
+name|f
+operator|.
+name|exists
+argument_list|()
+operator|||
+name|f
+operator|.
+name|createNewFile
+argument_list|()
+operator|)
+operator|&&
+name|f
+operator|.
+name|setReadOnly
+argument_list|()
+condition|)
+block|{
+try|try
+block|{
+name|List
+name|parentRow
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|parentRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+name|FULLIMPORT_QUERY
+argument_list|,
+name|parentRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+name|childRow
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|childRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"desc"
+argument_list|,
+literal|"hello"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select * from y where y.A='1'"
+argument_list|,
+name|childRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|runFullImport
+argument_list|(
+name|dataConfig_delta
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|f
+operator|.
+name|setWritable
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 comment|// WORKS
 annotation|@
